# multiapp

./: .gitignore  AI_AGENT_PROMPT_SPEC.md  CMakeLists.txt  Kconfig.projbuild  nvs_mock_data.csv  sdkconfig.ci  sdkconfig.defaults
components/app_interface/include/: app_interface.hpp
components/error_hub/: CMakeLists.txt  error_hub.cpp
components/error_hub/include/: error_hub.hpp
components/error_hub/test/: test_error_hub.cpp
components/hw_locks/: CMakeLists.txt  hw_locks.cpp
components/hw_locks/include/: hw_locks.hpp
components/msg_bus/: CMakeLists.txt  msg_bus.cpp
components/msg_bus/include/: msg_bus.hpp
components/telemetry_app/: CMakeLists.txt  telemetry_app.cpp
components/telemetry_app/include/: telemetry_app.hpp
components/ui_engine/: CMakeLists.txt  ui_engine.cpp
components/ui_engine/include/: ui_engine.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  test_main.cpp
